--- a/deployments/files/spec.yaml
+++ b/deployments/files/spec.yaml
@@ -9,8 +9,6 @@ info:
   contact:
     email: pendenga@gmail.com
 tags:
-  - name: Hymns
-    description: Details about hymns in multiple languages
   - name: Meetings
     description: Details about individual meetings
   - name: Orgs
@@ -20,193 +18,6 @@ tags:
   - name: Users
     description: Manage users
 paths:
-  /hymns:
-    get:
-      tags:
-        - Hymns
-      summary: List of hymns
-      description: List of hymns
-      operationId: getHymns
-      parameters:
-        - $ref: "#/components/parameters/dateFrom"
-        - $ref: "#/components/parameters/dateTo"
-        - $ref: "#/components/parameters/language"
-        - $ref: "#/components/parameters/page"
-        - $ref: "#/components/parameters/pageSize"
-      responses:
-        '201':
-          $ref: '#/components/responses/hymns'
-        '400':
-          description: 'invalid input, object invalid'
-    post:
-      tags:
-        - Hymns
-      summary: Creates a hymn
-      description: Creates a hymn
-      operationId: postHymns
-      responses:
-        '201':
-          description: hymn created
-        '400':
-          description: 'invalid input, hymn invalid'
-        '409':
-          description: an existing hymn already exists
-      parameters: []
-      requestBody:
-        description: Hymn to add
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Hymn'
-  /hymns/{HymnID}:
-    get:
-      tags:
-        - Hymns
-      summary: Get hymn
-      description: Get hymn
-      operationId: getHymn
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-      responses:
-        '200':
-          $ref: '#/components/responses/hymn'
-        '401':
-          description: |
-            You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
-    put:
-      tags:
-        - Hymns
-      summary: Update an existing hymn
-      description: Update an existing hymn
-      operationId: updateHymn
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-      requestBody:
-        description: Hymn object
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Hymn'
-      responses:
-        '200':
-          $ref: '#/components/responses/hymn'
-        '401':
-          description: |
-            You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
-    delete:
-      tags:
-        - Hymns
-      summary: Delete a hymn
-      description: Delete a hymn
-      operationId: deleteHymn
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-      responses:
-        '200':
-          description: The request was successful. The response will be empty.
-        '401':
-          description: You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
-  /hymns/{HymnID}/verses:
-    get:
-      tags:
-        - Hymns
-      summary: List of verses for a hymn
-      description: List of verses for a hymn
-      operationId: getVerses
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-        - $ref: "#/components/parameters/page"
-        - $ref: "#/components/parameters/pageSize"
-      responses:
-        '201':
-          $ref: '#/components/responses/verses'
-        '400':
-          description: 'invalid input, object invalid'
-    post:
-      tags:
-        - Hymns
-      summary: Adds a verse to a hymn
-      description: Adds a verse to a hymn
-      operationId: postVerse
-      responses:
-        '201':
-          description: verse created
-        '400':
-          description: 'invalid input, verse invalid'
-        '409':
-          description: an existing verse already exists
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-      requestBody:
-        description: Hymn to add
-        content:
-          application/json:
-            schema:
-              oneOf:
-                - $ref: '#/components/schemas/Verse'
-  /hymns/{HymnID}/verse/{VerseID}:
-    get:
-      tags:
-        - Hymns
-      summary: Get verse
-      description: Get verse
-      operationId: getVerse
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-        - $ref: "#/components/parameters/verseId"
-      responses:
-        '200':
-          $ref: '#/components/responses/verse'
-        '401':
-          description: |
-            You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
-    put:
-      tags:
-        - Hymns
-      summary: Update an existing verse
-      description: Update an existing verse
-      operationId: updateVerse
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-        - $ref: "#/components/parameters/verseId"
-      requestBody:
-        description: Verse object
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Verse'
-      responses:
-        '200':
-          $ref: '#/components/responses/verse'
-        '401':
-          description: |
-            You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
-    delete:
-      tags:
-        - Hymns
-      summary: Delete a verse
-      description: Delete a verse
-      operationId: deleteVerse
-      parameters:
-        - $ref: "#/components/parameters/hymnId"
-        - $ref: "#/components/parameters/verseId"
-      responses:
-        '200':
-          description: The request was successful. The response will be empty.
-        '401':
-          description: You did not supply valid Authorization. The response will be empty.
-        '404':
-          description: The record doesn’t exist. The response will be empty.
   /meetings:
     get:
       tags:
@@ -707,29 +518,9 @@ components:
     Duration:
       type: integer
       example: 5
-    Hymn:
-      type: object
-      required:
-        - id
-        - language
-        - page
-        - name
-      properties:
-        id:
-          $ref: '#/components/schemas/ID'
-        language:
-          $ref: '#/components/schemas/Language'
-        page:
-          type: integer
-        name:
-          type: string
-          example: Redeemer of Israel
-        translation_id:
-          $ref: '#/components/schemas/ID'
-        verses:
-          type: array
-          items:
-            $ref: '#/components/schemas/Verse'
+    HymnID:
+      type: string
+      example: 5954ad1f70174bb0
     ID:
       type: string
       format: uuid
@@ -765,7 +556,7 @@ components:
         meeting_role:
           $ref: '#/components/schemas/MeetingRole'
         hymn_id:
-          $ref: '#/components/schemas/Hymn'
+          $ref: '#/components/schemas/HymnID'
         show_translation:
           type: boolean
           default: false
@@ -918,24 +709,6 @@ components:
     UserID:
       type: string
       example: 194bbf601ed54ef5
-    Verse:
-      type: object
-      description: A single verse of a hymn
-      required:
-        - hymn_id
-        - number
-        - optional
-      properties:
-        hymn_id:
-          $ref: '#/components/schemas/ID'
-        number:
-          type: integer
-        optional:
-          type: boolean
-        lines:
-          type: array
-          items:
-            type: string
   parameters:
     dateFrom:
       in: query
@@ -959,7 +732,7 @@ components:
       description: Unique identifier for a hymn
       required: true
       schema:
-        $ref: '#/components/schemas/ID'
+        $ref: '#/components/schemas/HymnID'
     language:
       in: query
       name: Language
@@ -1016,13 +789,6 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/UserID'
-    verseId:
-      in: path
-      name: VerseID
-      description: Unique identifier for a Verse
-      required: true
-      schema:
-        $ref: '#/components/schemas/ID'
   responses:
     blankSlide:
       description: A single blank slide
@@ -1030,20 +796,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/BlankSlide'
-    hymn:
-      description: A single hymns
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Hymn'
-    hymns:
-      description: A list of hymns
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/Hymn'
     lyricsSlide:
       description: A single lyrics slide
       content:
@@ -1150,17 +902,3 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/User'
-    verse:
-      description: A single verse
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Verse'
-    verses:
-      description: List of verses
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/Verse'
